syntax = "proto3"; /* The first line of the file specifies that you're using proto3 syntax: if you don't do this the protocol buffer compiler will assume you are using proto2. This must be the first non-empty, non-comment line of the file */

package currencyService;

service CurrencyService {

    rpc getCurrencyRates (CurrencyNames) returns (stream CurrencyRates) {
    }
}

enum Currency {
    PLN = 0;
    GBP = 1;
    USD = 2;
    CHF = 3;
    NOK = 4;
    SEK = 5;
}

message CurrencyEntry {
    Currency currency = 1;
    float rate = 2;
}

message CurrencyNames {
    repeated Currency currencies = 1;
}

message CurrencyRates {
    repeated CurrencyEntry currencyRates = 1;
}
